manifests/policies/disallow-root-containers.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
 name: disallow-root-containers
 annotations:
    policies.kyverno.io/title: Disallow Root Containers
    policies.kyverno.io/description: >-
      Containers must not run as root user. Requires runAsNonRoot
      to be set to true to prevent privilege escalation
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: checkasNonroot
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - ticketops
      validate:
        message: "Containers must not run as root. Set securityContext.runAsNonRoot=true"
        pattern:
          spec:
            containers:
              - securityContext:
                  runAsNonRoot: true
