manifests/policies/verify-signature.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-image-signature
  annotations:
    policies.kyverno.io/title: Verify Image Signature
    policies.kyverno.io/description: >
      Ensures all images in the ticketops namespace are signed
      via Sigstore keyless signing from the CI pipeline.
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: verify-image-signature
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - ticketops
      exclude:
        any:
          - resources:
              kinds:
                - Job
                - CronJob
              namespaces:
                - ticketops
      verifyImages:
        - imageReferences:
            - "599476212737.dkr.ecr.ap-south-1.amazonaws.com/ticketops-dev-*"
          attestors:
            - entries:
                - keyless:
                    subject: "https://github.com/Suraj8853/ticketops-platform/.github/workflows/ci.yml@refs/heads/main"
                    issuer: "https://token.actions.githubusercontent.com"
                    rekor:
                      url: "https://rekor.sigstore.dev"
